# Synapse_KL

./: .ai-devkit.json  .gitignore  debug_raw.py  dev.sh  test_key.py
backend/: .env  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  seed_data.py  test_result.txt
backend/app/: main.py  worker.py
backend/app/api/: router.py
backend/app/core/: auth.py  config.py  db.py  enums.py  models.py  redis.py  research_type_error.md  supabase.py
backend/app/modules/: base_models.py
backend/app/modules/bookings/: __init__.py  exceptions.py  models.py  router.py  schemas.py  service.py
backend/app/modules/categories/: models.py  router.py  schemas.py  service.py
backend/app/modules/customers/: models.py  router.py  schemas.py  service.py
backend/app/modules/resources/: models.py  router.py  schemas.py  service.py
backend/migrations/: env.py
backend/migrations/versions/: 1acb654f06a1_merge_bookings_branch.py  20260106_bookings.py  2b3877664e70_add_room_to_resource_type.py  307ceb054af9_refactor_settings_for_multislot.py  758aaf548053_add_service_management_tables.py  a1b2c3d4e5f6_add_staff_scheduling_tables.py  a9f73cba70a6_fix_all_timestamps_timezone.py  c43b641a417e_fix_timestamp_timezone.py  dcc91bd5b6e7_add_operational_settings.py  e253bcda3613_create_profiles_table_and_trigger.py  f73f287705ff_add_auditing_and_sync_timezones.py
backend/tests/: conftest.py  test_categories.py  test_operational_settings.py  test_resources.py  test_scheduling.py  test_services.py  test_skills.py  test_staff.py
docs/: KTHT.drawio  (+2 more)
(+481 files in other folders)
