[project]
name = "synapse-backend"
version = "0.1.0"
description = "Hệ thống quản lý và chăm sóc khách hàng Spa"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2.0",
]

[tool.uv]
managed = true
package = false
